--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "schedule-frontend",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://ragulakash.github.io/Schedule-Planner",
   "dependencies": {
     "axios": "^1.7.4",
     "react": "^18.3.1",
@@ -9,7 +10,8 @@
     "react-scripts": "^5.0.1"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
   "browserslist": {
     "production": [
